import "EventId.proto";
option java_outer_classname="TaskCallbackResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message TaskCallbackResponse {
	optional EventId eventId = 1;
	optional string taskId = 2;
	optional int64 taskStatus = 3;
	optional bytes taskResult = 4;
	optional int64 callbackId = 5;
}